--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,11 @@
     - General CSS
     - Header
     - Main
-    - Home/portfolio
-    - Inner page
+    - Home
+    - Portfolio
+    - Text formatting
+    - Commissions
+    - Artist
     - Tooltip
     - Responsive code
 
@@ -83,7 +86,8 @@ body{
 header ul.social li a,
 .main .work a .caption,
 header nav ul li a,
-header .logo a h2{
+header .logo a h2,
+.content .CTA{
     transition:all .2s linear;
     -webkit-transition:all .2s linear;
     -moz-transition:all .2s linear;
@@ -267,13 +271,14 @@ h6              { font-size: .75em; margin: 1.67em 0 }
     box-sizing: border-box;
     position: relative;
     z-index: 55;
-    background: #fbfbfb;
+    background: #FCFAFB;
+    /* background: #fbfbfb; */
     clear: both;
 }
 
 
 
-/*  Home (Feature page)  */
+/*  Home  */
 .main .work{
     display: block;
     width: 33.33333333333333%;
@@ -331,14 +336,20 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 
 
 
+
+
 /* Portfolio */
+.main h3:first-child {
+  margin-top: 45px;
+}
+
 .main h3 {
   font-size: 1.5em;
   font-weight: lighter;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 3px;
-  margin: 25px 0 20px 0;
+  margin: 25px 0 15px 0;
   color: #a71c41;
 }
 
@@ -346,7 +357,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
   font-size: 1em;
   font-weight: lighter;
   text-align: center;
-  margin: -10px 0 20px 0;
+  margin: -5px 0 20px 0;
   color: #530e20;
 }
 
@@ -369,99 +380,26 @@ h6              { font-size: .75em; margin: 1.67em 0 }
   vertical-align: middle;
 }
 
-
-
-
-/*  Inner Page  */
-.top{
-    width: 100%;
-    height: 350px;
-    overflow: hidden;
-    display: block;
-    position: relative;
-    background: url('../img/hero_image.jpg') no-repeat;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-position: 50% 50%;
+.container {
+  width: 95%;
+  margin: auto;
 }
 
-.work_nav{
-    display: block;
-    width: 100%;
-}
 
-.work_nav .btn{
-    float: right;
-}
 
-.work_nav ul{
-    list-style: none;
-}
 
-.work_nav ul li{
-    display: block;
-    float: left;
-    margin: 0 0 1px 1px;
-    position: relative;
-}
 
-.work_nav a{
-    display: block;
-    width: 40px;
-    height: 40px;
-    background: url('../img/p_navigation.png') no-repeat;
-    background-position: 0 0;
-}
+/*  Text formatting (for commissions & artist)  */
 
-.work_nav a.previous{
-    background-position: 0 0;
-}
-
-.work_nav a.grid{
-    background-position: -41px 0;
-}
-
-.work_nav a.next{
-    background-position: -82px 0;
-}
-
-.top .title{
-    display: block;
-    width: 100%;color: #4b4848;
-    font-family: "raleway-bold", arial;
-    font-size: 26px;
-    font-weight: bold;
-    background: rgba(255, 255, 255, .7);
-    padding: 20px;
-    text-transform: uppercase;
-    line-height: 30px;
-    margin: 0!important;
-    overflow: hidden;
-
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-
-}
-
-.content_header{
-    position: absolute;
-    bottom: 0;
+.content {
+    color: #222;
+    font-family: "raleway-regular", arial;
+    font-size: 15px;
+    line-height: 1.8em;
+    width: 79%;
     margin: 0 auto;
-    left: 50%;
-    margin-left: -46.36363636363637%;
-}
-
-.content{
-    color: #4b4848;
-    font-family: "raleway-regular", arial;
-    font-size: 15px;
-    line-height: 22px;
-    padding: 60px 30px;
-    background: #fff;
+    padding: 25px 0;
+    background: #FCFAFB;
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -469,12 +407,16 @@ h6              { font-size: .75em; margin: 1.67em 0 }
     box-sizing: border-box;
 }
 
-.content p{
+.content p {
     color: #4b4848;
     font-family: "raleway-regular", arial;
     font-size: 15px;
-    line-height: 24px;
-    margin-bottom: 60px;
+    margin-bottom: 5px;
+}
+
+.content ul li {
+    color: #222;
+    margin-left: 2.5%;
 }
 
 .content h1,
@@ -482,13 +424,61 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 .content h3,
 .content h4,
 .content h5,
-.content h6{
+.content h6 {
     color: #222;
     font-family: "raleway-semibold", arial;
     font-weight: bold;
     line-height: 28px;
     margin-bottom: 30px;
 }
+
+.content .title {
+    color: #530e20;
+    font-weight: 400;
+    font-size: 21px;
+    letter-spacing: 1px;
+}
+
+
+
+
+
+/*  Commissions  */
+
+.content .CTA {
+    color: #a71c41;
+    background-color: #FCFAFB;
+    border: 2px solid #a71c41;
+    border-radius: 4px;
+    width: 27%;
+    margin: 3% auto;
+    padding: 10px 0;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    font-family: "raleway-regular", arial;
+    cursor: pointer;
+}
+
+.content .CTA:hover {
+    color: #fff;
+    background-color: #a71c41;
+}
+
+
+
+
+
+/*  Artist  */
+
+.content .profile {
+    width: 50%;
+    float: left;
+}
+
+
+
 
 
 /*  Tooltip  */
@@ -522,7 +512,6 @@ h6              { font-size: .75em; margin: 1.67em 0 }
     left: 50%;
     margin-left: -3px;
 }
-
 
 
 
