finished my bio, added some cool links. so much progress

--- a/css/main.css
+++ b/css/main.css
@@ -446,7 +446,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 }
 
 .content p a {
-  color: #a71c41;
+  color: #da4e74; 
   text-decoration: underline #530e20 dotted;
 }
 
