--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@
     - Text formatting
     - Commissions
     - Artist
-    - Tooltip
     - Responsive code
+    - Tooltip
 
 
 */
@@ -88,7 +88,10 @@ header ul.social li a,
 header nav ul li a,
 header .logo a h2,
 .content .CTA,
-.content p a{
+.content p a,
+.content ul.social li a,
+#menu_icon,
+.close_menu{
     transition:all .2s linear;
     -webkit-transition:all .2s linear;
     -moz-transition:all .2s linear;
@@ -194,15 +197,13 @@ h6              { font-size: .75em; margin: 1.67em 0 }
     header ul.social li a{
         display: block;
         width: 50px;
-        height: 50px;
+        height: 40px;
         font-size: 1.5em;
-        color: #ffffff;
-        /* color: #a71c41; */
+        color: #fff;
     }
 
     header ul.social li a:hover{
         color: #82f4fb;
-        /* color: #eca7b9; */
     }
 
     header .rights p{
@@ -414,7 +415,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
     color: #222;
     font-family: "raleway-regular", arial;
     font-size: 15px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 .content ul li {
@@ -441,7 +442,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 
 .content .title {
     color: #530e20;
-    font-size: 21px;
+    font-size: 1.4em;
     font-weight: lighter;
     font-family: "raleway-regular", arial;
     letter-spacing: 1px;
@@ -451,7 +452,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 
 .content p a {
   color: #da4e74;
-  text-decoration: underline #530e20 dotted;
+  text-decoration: underline;
 }
 
 .content p a:hover {
@@ -462,24 +463,24 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 /*  Commissions  */
 
 .content .CTA {
-    color: #a71c41;
-    background-color: #FCFAFB;
+    color: #fff;
+    background-color: #a71c41;
     border: 2px solid #a71c41;
     border-radius: 4px;
-    width: 27%;
     margin: 3% auto;
+    width: 27%;
     padding: 10px 0;
+    display: block;
+    cursor: pointer;
     text-align: center;
     text-decoration: none;
-    display: block;
     font-size: 16px;
     font-family: "raleway-regular", arial;
-    cursor: pointer;
 }
 
 .content .CTA:hover {
-    color: #fff;
-    background-color: #a71c41;
+    color: #a71c41;
+    background-color: #fff;
 }
 
 .content .commission {
@@ -524,40 +525,24 @@ h6              { font-size: .75em; margin: 1.67em 0 }
   color: #530e20;
 }
 
+.fa-circle{color: #A71C41;}
 
+.content ul.social{
+    text-align: center;
+}
 
+.content ul.social li{
+    display: inline-block;
+    list-style: none;
+    margin: auto 1%;
+}
 
-/*  Tooltip  */
-.tooltip{
-    display: block;
-    padding: 7px 10px;
-    background: #454545;
+.content ul.social li a{
     color: #fff;
-    font-family: "raleway-regular", arial;
-    font-size: 12px;
-    position: absolute;
-    white-space: nowrap;
-    z-index: 999;
-    opacity: 0;
-    text-align: center;
-    letter-spacing: .5px;
-
 }
 
-.tooltip:after{
-    content: '';
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 3px 3px 0 3px;
-    border-color: #454545 transparent transparent transparent;
-    display: block;
-    text-align: center;
-    position: absolute;
-    bottom: -3px;
-    left: 50%;
-    margin-left: -3px;
-}
+.content ul.social li a:hover{opacity: 0.55;}
+
 
 
 
@@ -663,4 +648,39 @@ h6              { font-size: .75em; margin: 1.67em 0 }
      header .logo a{
        font-size: .9em;
      }
+}
+
+
+
+
+/*  Tooltip  */
+.tooltip{
+    display: block;
+    padding: 7px 10px;
+    background: #454545;
+    color: #fff;
+    font-family: "raleway-regular", arial;
+    font-size: 12px;
+    position: absolute;
+    white-space: nowrap;
+    z-index: 999;
+    opacity: 0;
+    text-align: center;
+    letter-spacing: .5px;
+
+}
+
+.tooltip:after{
+    content: '';
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 3px 3px 0 3px;
+    border-color: #454545 transparent transparent transparent;
+    display: block;
+    text-align: center;
+    position: absolute;
+    bottom: -3px;
+    left: 50%;
+    margin-left: -3px;
 }
