--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,11 @@ body{
     margin: 0 auto;
 }
 
+/* .main .work .caption is a replacement for the a href inner.html problem. */
+/* feel free to alter or remove it once you add jquery modal boxes! */
 header ul.social li a,
 .main .work a .caption,
+.main .work .caption,
 header nav ul li a,
 header .logo a h2,
 .content .CTA,
@@ -309,7 +312,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 }
 
 
-.main .work a:hover .caption{
+.main .work .caption:hover{
     opacity: 1;
 }
 
@@ -516,7 +519,7 @@ h6              { font-size: .75em; margin: 1.67em 0 }
 }
 
 .option p {
-  
+
 }
 
 .option {
